--- a/src/i18n/Pусский.json
+++ b/src/i18n/Pусский.json
@@ -1,36 +1,37 @@
 {
-  "ui.button.load": "加载数据",
-  "ui.button.update": "更新数据",
-  "ui.button.excel": "导出Excel",
-  "ui.button.setting": "设置",
-  "ui.select.newAccount": "新账号",
-  "ui.hint.newAccount": "从其它账号导出数据",
-  "ui.hint.init": "请先在游戏里打开任意一个抽卡记录后再点击“加载数据”按钮",
-  "ui.hint.lastUpdate": "上次数据更新时间为：",
-  "ui.hint.failed": "操作失败",
-  "ui.win.title": "原神抽卡记录导出工具",
-  "ui.data.total": "一共",
-  "ui.data.times": "抽",
-  "ui.data.sum": "已累计",
-  "ui.data.no5star": "抽未出5星",
-  "ui.data.character": "角色",
-  "ui.data.weapon": "武器",
-  "ui.data.star5": "5星",
-  "ui.data.star4": "4星",
-  "ui.data.star3": "3星",
-  "ui.data.history": "5星历史记录",
-  "ui.data.average": "5星平均出货次数为：",
-  "ui.data.chara5": "5星角色",
-  "ui.data.chara4": "4星角色",
-  "ui.data.weapon5": "5星武器",
-  "ui.data.weapon4": "4星武器",
-  "ui.data.weapon3": "3星武器",
-  "ui.setting.title": "设置",
-  "ui.setting.language": "语言",
-  "ui.setting.logType": "日志类型",
-  "ui.setting.auto": "自动",
-  "ui.setting.cnServer": "国服",
-  "ui.setting.seaServer": "外服",
+ "ui.button.load": "Загрузить данные",
+  "ui.button.update": "Обновить данные",
+  "ui.button.excel": "Экспортировать в Excel",
+  "ui.button.setting": "Установка",
+  "ui.select.newAccount": "Выбрать аккаунт",
+  "ui.hint.newAccount": "Экспорт данных из других учетных записей",
+  "ui.hint.init": "Пожалуйста, откройте любую историю своих молитв в игре, прежде чем нажимать кнопку *Загрузить данные* ",
+  "ui.hint.lastUpdate": "Время последнего обновления данных：",
+  "ui.hint.failed": "Операция прервалась",
+  "ui.win.title": "Genshin Gacha Exporter", 
+  "ui.data.total": "Всего",
+  "ui.data.times": "", //it's not necessary
+  "ui.data.sum": "", //it's not necessary
+  "ui.data.no5star": "Молитв после выпадения:",
+  "ui.data.character": "Персонаж",
+  "ui.data.weapon": "Оружие",
+  "ui.data.star5": "5 звёзд",
+  "ui.data.star4": "4 звезды",
+  "ui.data.star3": "3 звезды ",
+  "ui.data.history": "Полученные 5* награды:",
+  "ui.data.average": "Среднее число получения 5*：",
+  "ui.data.chara5": "5* Персонаж",
+  "ui.data.chara4": "4* Персонаж",
+  "ui.data.weapon5": "5* Оружие",
+  "ui.data.weapon4": "4* Оружие",
+  "ui.data.weapon3": "3* Оружие",
+  "ui.setting.title": "Настройки",
+  "ui.setting.language": "Русский",
+  "ui.setting.logType": "Тип журнала",
+  "ui.setting.auto": "Автоматически",
+  "ui.setting.cnServer": "CN сервер",
+  "ui.setting.seaServer": "SEA сервер",
+  //to translate further, I need to see this functionality in the program. preferably in English.
   "ui.setting.logTypeHint": "使用游戏日志获取URL时，优先选择哪种服务器生成的日志文件。",
   "ui.setting.autuUpdate": "自动更新",
   "ui.setting.proxyMode": "代理模式",
