--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -1,6 +1,6 @@
 {
   "ui.button.load": "加载数据",
-  "ui.button.update": "更新数据",
+  "ui.button.update": "Update Data",
   "ui.button.excel": "导出Excel",
   "ui.button.setting": "设置",
   "ui.select.newAccount": "新账号",
