--- a/src/i18n/繁體中文.json
+++ b/src/i18n/繁體中文.json
@@ -1,6 +1,6 @@
 {
   "ui.button.load": "加载数据",
-  "ui.button.update": "更新数据",
+  "ui.button.update": "更新數據",
   "ui.button.excel": "导出Excel",
   "ui.button.setting": "设置",
   "ui.select.newAccount": "新账号",
