--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -1,67 +1,67 @@
 {
-  "ui.button.load": "加载数据",
-  "ui.button.update": "Update Data",
-  "ui.button.excel": "导出Excel",
-  "ui.button.setting": "设置",
-  "ui.select.newAccount": "新账号",
-  "ui.hint.newAccount": "从其它账号导出数据",
-  "ui.hint.init": "请先在游戏里打开任意一个抽卡记录后再点击“加载数据”按钮",
-  "ui.hint.lastUpdate": "上次数据更新时间为：",
-  "ui.hint.failed": "操作失败",
-  "ui.win.title": "原神抽卡记录导出工具",
-  "ui.data.total": "一共",
-  "ui.data.times": "抽",
-  "ui.data.sum": "已累计",
-  "ui.data.no5star": "抽未出5星",
-  "ui.data.character": "角色",
-  "ui.data.weapon": "武器",
-  "ui.data.star5": "5星",
-  "ui.data.star4": "4星",
-  "ui.data.star3": "3星",
-  "ui.data.history": "5星历史记录",
-  "ui.data.average": "5星平均出货次数为：",
-  "ui.data.chara5": "5星角色",
-  "ui.data.chara4": "4星角色",
-  "ui.data.weapon5": "5星武器",
-  "ui.data.weapon4": "4星武器",
-  "ui.data.weapon3": "3星武器",
-  "ui.setting.title": "设置",
-  "ui.setting.language": "语言",
-  "ui.setting.logType": "日志类型",
-  "ui.setting.auto": "自动",
-  "ui.setting.cnServer": "国服",
-  "ui.setting.seaServer": "外服",
-  "ui.setting.logTypeHint": "使用游戏日志获取URL时，优先选择哪种服务器生成的日志文件。",
-  "ui.setting.autuUpdate": "自动更新",
-  "ui.setting.proxyMode": "代理模式",
-  "ui.setting.proxyModeHint": "通过设置系统代理来获取URL，打开后会在从日志中获取URL失败时启动。",
-  "ui.setting.closeProxy": "关闭系统代理",
-  "ui.setting.closeProxyHint": "如果使用过代理模式时工具非正常关闭，可能导致系统代理设置没能清除，可以通过这个按钮来清除设置过的系统代理。",
-  "ui.about.title": "关于",
-  "ui.about.license": "本工具为开源软件，源代码使用 MIT 协议授权",
-  "log.save.failed": "保存本地数据失败",
-  "log.file.notFound": "未找到游戏日志，确认是否已打开游戏抽卡记录",
-  "log.url.notFound": "未找到URL",
-  "log.file.readFailed": "读取日志失败",
-  "log.fetch.retry": "获取${name}第${page}页失败，5秒后进行第${count}次重试……",
-  "log.fetch.retryFailed": "获取${name}第${page}页失败，已超出重试次数",
-  "log.fetch.interval": "正在获取${name}第${page}页，每10页休息1秒……",
-  "log.fetch.current": "正在获取${name}第${page}页",
-  "log.fetch.authTimeout": "身份认证已过期，请重新打开游戏抽卡记录",
-  "log.fetch.gachaType": "正在获取抽卡活动类型",
-  "log.fetch.gachaTypeOk": "获取抽卡活动类型成功",
-  "log.url.lackAuth": "URL中缺少authkey",
-  "log.proxy.hint": "正在使用代理模式[${ip}:${port}]获取URL，请打开游戏抽卡记录，或刷新抽卡记录",
-  "log.url.notFound2": "未找到URL，请确认是否已打开游戏抽卡记录",
-  "log.url.incorrect": "获取URL参数失败",
-  "log.autoUpdate.success": "自动更新已完成，重启工具后生效",
-  "excel.header.time": "时间",
-  "excel.header.name": "名称",
-  "excel.header.type": "类别",
-  "excel.header.rank": "星级",
-  "excel.header.total": "总次数",
-  "excel.header.pity": "保底内",
-  "excel.customFont": "微软雅黑",
-  "excel.filePrefix": "原神抽卡记录",
-  "excel.fileType": "Excel文件"
+  "ui.button.load": "Load data",
+  "ui.button.update": "Update",
+  "ui.button.excel": "Export Excel",
+  "ui.button.setting": "Settings",
+  "ui.select.newAccount": "New account",
+  "ui.hint.newAccount": "Export data from other accounts",
+  "ui.hint.init": "Please open your gacha history inside the game client before clicking on the 'Load data' button",
+  "ui.hint.lastUpdate": "Last update：",
+  "ui.hint.failed": "Oops, something failed",
+  "ui.win.title": "Genshin gacha history exporter",
+  "ui.data.total": "Total",
+  "ui.data.times": "Pulls",
+  "ui.data.sum": "Accumulated pulls",
+  "ui.data.no5star": "pulls without a 5 star",
+  "ui.data.character": "Character",
+  "ui.data.weapon": "Weapon",
+  "ui.data.star5": "5 star",
+  "ui.data.star4": "4 star",
+  "ui.data.star3": "3 star",
+  "ui.data.history": "5 star history",
+  "ui.data.average": "5 star on average：",
+  "ui.data.chara5": "5 star character",
+  "ui.data.chara4": "4 star character",
+  "ui.data.weapon5": "5 star weapon",
+  "ui.data.weapon4": "4 star weapon",
+  "ui.data.weapon3": "3 star weapon",
+  "ui.setting.title": "Settings",
+  "ui.setting.language": "Language",
+  "ui.setting.logType": "Log type",
+  "ui.setting.auto": "Auto",
+  "ui.setting.cnServer": "CN server",
+  "ui.setting.seaServer": "Global server",
+  "ui.setting.logTypeHint": "Choose which server generated logs to be used first when acquiring URL from game logs",
+  "ui.setting.autuUpdate": "Auto update",
+  "ui.setting.proxyMode": "Proxy mode",
+  "ui.setting.proxyModeHint": "When we fail to get the URL from system logs, use the system proxy",
+  "ui.setting.closeProxy": "Disable system proxy",
+  "ui.setting.closeProxyHint": "When you choose proxy mode, if the program crashes it can cause unwanted results that may affect your system. You can click this button to clear the system proxy settings.",
+  "ui.about.title": "About",
+  "ui.about.license": "This software is opensource using MIT license.",
+  "log.save.failed": "Failed to save local data",
+  "log.file.notFound": "Unable to find game logs, please make sure you already opened gacha history inside the game client",
+  "log.url.notFound": "Unable to find URL",
+  "log.file.readFailed": "Failed to read logs",
+  "log.fetch.retry": "Processing ${name} of page ${page} failed，retrying in 5 seconds for the ${count} time……",
+  "log.fetch.retryFailed": "Processing ${name} of page ${page} failed，retry times maxed out",
+  "log.fetch.interval": "Processing ${name} of page ${page}，1 second timeout every 10 pages……",
+  "log.fetch.current": "Processing ${name} of page ${page}",
+  "log.fetch.authTimeout": "User authentication expired, please reopen gacha history inside the game client.",
+  "log.fetch.gachaType": "Getting gacha type, please wait",
+  "log.fetch.gachaTypeOk": "Gacha type acquired",
+  "log.url.lackAuth": "Authkey not found in URL",
+  "log.proxy.hint": "Using proxy mode [${ip}:${port}] to get URL，please open gacha history or try to refresh",
+  "log.url.notFound2": "Unable to find URL, please make sure you already opened gacha history inside the game client",
+  "log.url.incorrect": "Unable to get URL parameters",
+  "log.autoUpdate.success": "Auto update successful，please restart the program",
+  "excel.header.time": "time",
+  "excel.header.name": "name",
+  "excel.header.type": "type",
+  "excel.header.rank": "rarity",
+  "excel.header.total": "total",
+  "excel.header.pity": "within pity",
+  "excel.customFont": "Arial",
+  "excel.filePrefix": "Genshin gacha logger",
+  "excel.fileType": "Excel file"
 }
