--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -1,4 +1,5 @@
 {
+  "symbol.colon": ": ",
   "ui.button.load": "Load data",
   "ui.button.update": "Update",
   "ui.button.excel": "Export Excel",
@@ -6,7 +7,7 @@
   "ui.select.newAccount": "New account",
   "ui.hint.newAccount": "Export data from other accounts",
   "ui.hint.init": "Please open your gacha history inside the game client before clicking on the 'Load data' button",
-  "ui.hint.lastUpdate": "Last update：",
+  "ui.hint.lastUpdate": "Last update",
   "ui.hint.failed": "Oops, something failed",
   "ui.win.title": "Genshin gacha history exporter",
   "ui.data.total": "Total",
@@ -19,7 +20,7 @@
   "ui.data.star4": "4 star",
   "ui.data.star3": "3 star",
   "ui.data.history": "5 star history",
-  "ui.data.average": "5 star on average：",
+  "ui.data.average": "5 star on average",
   "ui.data.chara5": "5 star character",
   "ui.data.chara4": "4 star character",
   "ui.data.weapon5": "5 star weapon",
@@ -27,12 +28,13 @@
   "ui.data.weapon3": "3 star weapon",
   "ui.setting.title": "Settings",
   "ui.setting.language": "Language",
+  "ui.setting.languageHint": "When the translation is missing, English will be displayed by default.",
   "ui.setting.logType": "Log type",
   "ui.setting.auto": "Auto",
   "ui.setting.cnServer": "CN server",
   "ui.setting.seaServer": "Global server",
   "ui.setting.logTypeHint": "Choose which server generated logs to be used first when acquiring URL from game logs",
-  "ui.setting.autuUpdate": "Auto update",
+  "ui.setting.autoUpdate": "Auto update",
   "ui.setting.proxyMode": "Proxy mode",
   "ui.setting.proxyModeHint": "When we fail to get the URL from system logs, use the system proxy",
   "ui.setting.closeProxy": "Disable system proxy",
