--- a/src/i18n/简体中文.json
+++ b/src/i18n/简体中文.json
@@ -1,4 +1,5 @@
 {
+  "symbol.colon": "：",
   "ui.button.load": "加载数据",
   "ui.button.update": "更新数据",
   "ui.button.excel": "导出Excel",
@@ -6,7 +7,7 @@
   "ui.select.newAccount": "新账号",
   "ui.hint.newAccount": "从其它账号导出数据",
   "ui.hint.init": "请先在游戏里打开任意一个抽卡记录后再点击“加载数据”按钮",
-  "ui.hint.lastUpdate": "上次数据更新时间为：",
+  "ui.hint.lastUpdate": "上次数据更新时间为",
   "ui.hint.failed": "操作失败",
   "ui.win.title": "原神抽卡记录导出工具",
   "ui.data.total": "一共",
@@ -19,7 +20,7 @@
   "ui.data.star4": "4星",
   "ui.data.star3": "3星",
   "ui.data.history": "5星历史记录",
-  "ui.data.average": "5星平均出货次数为：",
+  "ui.data.average": "5星平均出货次数为",
   "ui.data.chara5": "5星角色",
   "ui.data.chara4": "4星角色",
   "ui.data.weapon5": "5星武器",
@@ -27,12 +28,13 @@
   "ui.data.weapon3": "3星武器",
   "ui.setting.title": "设置",
   "ui.setting.language": "语言",
+  "ui.setting.languageHint": "缺少翻译时，会默认显示简体中文",
   "ui.setting.logType": "日志类型",
   "ui.setting.auto": "自动",
   "ui.setting.cnServer": "国服",
   "ui.setting.seaServer": "外服",
   "ui.setting.logTypeHint": "使用游戏日志获取URL时，优先选择哪种服务器生成的日志文件。",
-  "ui.setting.autuUpdate": "自动更新",
+  "ui.setting.autoUpdate": "自动更新",
   "ui.setting.proxyMode": "代理模式",
   "ui.setting.proxyModeHint": "通过设置系统代理来获取URL，打开后会在从日志中获取URL失败时启动。",
   "ui.setting.closeProxy": "关闭系统代理",
