i18n: remove extra colons from Pусский.json

--- a/src/i18n/Pусский.json
+++ b/src/i18n/Pусский.json
@@ -7,20 +7,20 @@
   "ui.select.newAccount": "Выбрать аккаунт",
   "ui.hint.newAccount": "Экспорт данных из других учетных записей",
   "ui.hint.init": "Пожалуйста, откройте любую историю своих молитв в игре, прежде чем нажимать кнопку *Загрузить данные* ",
-  "ui.hint.lastUpdate": "Время последнего обновления данных：",
+  "ui.hint.lastUpdate": "Время последнего обновления данных",
   "ui.hint.failed": "Операция прервалась",
   "ui.win.title": "Genshin Gacha Exporter",
   "ui.data.total": "Всего",
   "ui.data.times": "",
   "ui.data.sum": "",
-  "ui.data.no5star": "Молитв после выпадения:",
+  "ui.data.no5star": "Молитв после выпадения",
   "ui.data.character": "Персонаж",
   "ui.data.weapon": "Оружие",
   "ui.data.star5": "5 звёзд",
   "ui.data.star4": "4 звезды",
   "ui.data.star3": "3 звезды ",
-  "ui.data.history": "Полученные 5* награды:",
-  "ui.data.average": "Среднее число получения 5*：",
+  "ui.data.history": "Полученные 5* награды",
+  "ui.data.average": "Среднее число получения 5*",
   "ui.data.chara5": "5* Персонаж",
   "ui.data.chara4": "4* Персонаж",
   "ui.data.weapon5": "5* Оружие",
