新增繁體中文本地化文件

--- a/src/i18n/繁體中文.json
+++ b/src/i18n/繁體中文.json
@@ -1,3 +1,69 @@
 {
-  "ui.button.update": "更新數據"
+  "symbol.colon": "：",
+  "ui.button.load": "加載資料",
+  "ui.button.update": "更新資料",
+  "ui.button.excel": "輸出Excel",
+  "ui.button.setting": "設定",
+  "ui.select.newAccount": "新帳號",
+  "ui.hint.newAccount": "從其他帳號導出資料",
+  "ui.hint.init": "請先在遊戲裡打開任意一個抽卡紀錄後，再點擊“加載資料“按鈕。",
+  "ui.hint.lastUpdate": "上次資料更新時間為",
+  "ui.hint.failed": "操作失敗",
+  "ui.win.title": "原神抽卡紀錄導出工具",
+  "ui.data.total": "總共",
+  "ui.data.times": "抽",
+  "ui.data.sum": "已累計",
+  "ui.data.no5star": "抽未出5星",
+  "ui.data.character": "角色",
+  "ui.data.weapon": "武器",
+  "ui.data.star5": "5星",
+  "ui.data.star4": "4星",
+  "ui.data.star3": "3星",
+  "ui.data.history": "5星歷史紀錄",
+  "ui.data.average": "5星平均出貨次數為",
+  "ui.data.chara5": "5星角色",
+  "ui.data.chara4": "4星角色",
+  "ui.data.weapon5": "5星武器",
+  "ui.data.weapon4": "4星武器",
+  "ui.data.weapon3": "3星武器",
+  "ui.setting.title": "設置",
+  "ui.setting.language": "語言",
+  "ui.setting.languageHint": "缺少翻譯時，會默認顯示簡體中文。",
+  "ui.setting.logType": "日誌類型",
+  "ui.setting.auto": "自動",
+  "ui.setting.cnServer": "國服",
+  "ui.setting.seaServer": "國際服",
+  "ui.setting.logTypeHint": "使用遊戲日誌獲取URL時，優先選擇哪種伺服器產生的日誌文件。",
+  "ui.setting.autoUpdate": "自動更新",
+  "ui.setting.proxyMode": "Proxy代理模式",
+  "ui.setting.proxyModeHint": "通過設置系統proxy來獲取URL，打開後會在從日誌中獲取URL失敗時啟動。",
+  "ui.setting.closeProxy": "關閉系統proxy代理",
+  "ui.setting.closeProxyHint": "如果使用過代理模式時工具非正常關閉，可能導致系統proxy設置未能清除，可以通過這個按鈕來清除設置過的系統proxy。",
+  "ui.about.title": "關於",
+  "ui.about.license": "本工具為開源軟體，源代碼使用 MIT 協議授權",
+  "log.save.failed": "保存本機資料失敗",
+  "log.file.notFound": "未找到遊戲日誌，請確認是否已開啟遊戲抽卡紀錄。",
+  "log.url.notFound": "未找到URL",
+  "log.file.readFailed": "讀取日誌失敗。",
+  "log.fetch.retry": "獲取${name}第${page}頁失敗，5秒後進行第${count}次重試……",
+  "log.fetch.retryFailed": "獲取${name}第${page}頁失敗，已超出重試次數",
+  "log.fetch.interval": "正在獲取${name}第${page}頁，每10頁休息1秒……",
+  "log.fetch.current": "正在獲取${name}第${page}頁",
+  "log.fetch.authTimeout": "身分認證已過期，請重新打開遊戲抽卡紀錄。",
+  "log.fetch.gachaType": "正在獲取抽卡活動類型",
+  "log.fetch.gachaTypeOk": "獲取抽卡活動類型成功",
+  "log.url.lackAuth": "URL中缺少authkey",
+  "log.proxy.hint": "正在使用代理模式[${ip}:${port}]獲取URL，請打開遊戲抽卡紀錄，或刷新抽卡紀錄。",
+  "log.url.notFound2": "未找到URL，請確認是否已打開遊戲抽卡紀錄。",
+  "log.url.incorrect": "獲取URL參數失敗。",
+  "log.autoUpdate.success": "自動更新已完成，重新啟動工具後生效。",
+  "excel.header.time": "時間",
+  "excel.header.name": "名稱",
+  "excel.header.type": "類別",
+  "excel.header.rank": "星級",
+  "excel.header.total": "總次數",
+  "excel.header.pity": "保底內",
+  "excel.customFont": "微軟雅黑",
+  "excel.filePrefix": "原神抽卡紀錄",
+  "excel.fileType": "Excel文件"
 }
