chore: Gacha -> Wish

--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -6,10 +6,10 @@
   "ui.button.setting": "Settings",
   "ui.select.newAccount": "New account",
   "ui.hint.newAccount": "Export data from other accounts",
-  "ui.hint.init": "Please open your gacha history inside the game client before clicking on the 'Load data' button",
+  "ui.hint.init": "Please open your wish history inside the game client before clicking on the 'Load data' button",
   "ui.hint.lastUpdate": "Last update",
   "ui.hint.failed": "Oops, something failed",
-  "ui.win.title": "Genshin gacha history exporter",
+  "ui.win.title": "Genshin Wish History Exporter",
   "ui.data.total": "Total",
   "ui.data.times": "Pulls",
   "ui.data.sum": "Accumulated",
@@ -42,19 +42,19 @@
   "ui.about.title": "About",
   "ui.about.license": "This software is opensource using MIT license.",
   "log.save.failed": "Failed to save local data",
-  "log.file.notFound": "Unable to find game logs, please make sure you already opened gacha history inside the game client",
+  "log.file.notFound": "Unable to find game logs, please make sure you already opened wish history inside the game client",
   "log.url.notFound": "Unable to find URL",
   "log.file.readFailed": "Failed to read logs",
   "log.fetch.retry": "Processing ${name} of page ${page} failed，retrying in 5 seconds for the ${count} time……",
   "log.fetch.retryFailed": "Processing ${name} of page ${page} failed，retry times maxed out",
   "log.fetch.interval": "Processing ${name} of page ${page}，1 second timeout every 10 pages……",
   "log.fetch.current": "Processing ${name} of page ${page}",
-  "log.fetch.authTimeout": "User authentication expired, please reopen gacha history inside the game client.",
-  "log.fetch.gachaType": "Getting gacha type, please wait",
-  "log.fetch.gachaTypeOk": "Gacha type acquired",
+  "log.fetch.authTimeout": "User authentication expired, please reopen wish history inside the game client.",
+  "log.fetch.gachaType": "Getting wish type, please wait",
+  "log.fetch.gachaTypeOk": "Wish type acquired",
   "log.url.lackAuth": "Authkey not found in URL",
-  "log.proxy.hint": "Using proxy mode [${ip}:${port}] to get URL，please open gacha history or try to refresh",
-  "log.url.notFound2": "Unable to find URL, please make sure you already opened gacha history inside the game client",
+  "log.proxy.hint": "Using proxy mode [${ip}:${port}] to get URL，please open wish history or try to refresh",
+  "log.url.notFound2": "Unable to find URL, please make sure you already opened wish history inside the game client",
   "log.url.incorrect": "Unable to get URL parameters",
   "log.autoUpdate.success": "Auto update successful，please restart the program",
   "excel.header.time": "time",
@@ -64,6 +64,6 @@
   "excel.header.total": "total",
   "excel.header.pity": "within pity",
   "excel.customFont": "Arial",
-  "excel.filePrefix": "Genshin gacha logger",
+  "excel.filePrefix": "Genshin wish logger",
   "excel.fileType": "Excel file"
 }
