更新繁體中文本地化文件

--- a/src/i18n/繁體中文.json
+++ b/src/i18n/繁體中文.json
@@ -50,8 +50,8 @@
   "log.fetch.interval": "正在獲取${name}第${page}頁，每10頁休息1秒……",
   "log.fetch.current": "正在獲取${name}第${page}頁",
   "log.fetch.authTimeout": "身分認證已過期，請重新打開遊戲抽卡紀錄。",
-  "log.fetch.gachaType": "正在獲取祈愿活動類型",
-  "log.fetch.gachaTypeOk": "獲取祈愿活動類型成功",
+  "log.fetch.gachaType": "正在獲取祈願活動類型",
+  "log.fetch.gachaTypeOk": "獲取祈願活動類型成功",
   "log.url.lackAuth": "URL中缺少authkey",
   "log.proxy.hint": "正在使用代理模式[${ip}:${port}]獲取URL，請打開遊戲抽卡紀錄，或刷新抽卡紀錄。",
   "log.url.notFound2": "未找到URL，請確認是否已打開遊戲抽卡紀錄。",
