feat: add manually url input

--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -3,6 +3,7 @@
   "ui.button.load": "Load data",
   "ui.button.update": "Update",
   "ui.button.excel": "Export Excel",
+  "ui.button.url": "Input URL",
   "ui.button.setting": "Settings",
   "ui.select.newAccount": "New account",
   "ui.hint.newAccount": "Export data from other accounts",
@@ -41,6 +42,10 @@
   "ui.setting.closeProxyHint": "When you choose proxy mode, if the program crashes it can cause unwanted results that may affect your system. You can click this button to clear the system proxy settings.",
   "ui.about.title": "About",
   "ui.about.license": "This software is opensource using MIT license.",
+  "ui.urldlg.title": "Input URL manually",
+  "ui.urldlg.hint": "Please input https://webstatic.mihoyo.com url",
+  "ui.urldlg.cancel": "Cancel",
+  "ui.urldlg.ok": "OK",
   "log.save.failed": "Failed to save local data",
   "log.file.notFound": "Unable to find game logs, please make sure you already opened wish history inside the game client",
   "log.url.notFound": "Unable to find URL",
