add option button

--- a/src/i18n/简体中文.json
+++ b/src/i18n/简体中文.json
@@ -5,6 +5,7 @@
   "ui.button.excel": "导出Excel",
   "ui.button.url": "输入URL",
   "ui.button.setting": "设置",
+  "ui.button.option": "选项",
   "ui.select.newAccount": "新账号",
   "ui.hint.newAccount": "从其它账号导出数据",
   "ui.hint.init": "请先在游戏里打开任意一个抽卡记录后再点击“加载数据”按钮",
@@ -42,10 +43,11 @@
   "ui.setting.closeProxyHint": "如果使用过代理模式时工具非正常关闭，可能导致系统代理设置没能清除，可以通过这个按钮来清除设置过的系统代理。",
   "ui.about.title": "关于",
   "ui.about.license": "本工具为开源软件，源代码使用 MIT 协议授权",
-  "ui.urldlg.title": "手动输入URL",
-  "ui.urldlg.hint": "请输入 https://webstatic.mihoyo.com url",
-  "ui.urldlg.cancel": "取消",
-  "ui.urldlg.ok": "确定",
+  "ui.urldialog.title": "手动输入URL",
+  "ui.urldialog.hint": "这个功能应当只在你理解这里需要什么URL时使用",
+  "ui.urldialog.placeholder": "请输入带有身份认证信息的URL",
+  "ui.common.cancel": "取消",
+  "ui.common.ok": "确定",
   "log.save.failed": "保存本地数据失败",
   "log.file.notFound": "未找到游戏日志，确认是否已打开游戏抽卡记录",
   "log.url.notFound": "未找到URL",
