--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -5,6 +5,7 @@
   "ui.button.excel": "Export Excel",
   "ui.button.url": "Input URL",
   "ui.button.setting": "Settings",
+  "ui.button.option": "Option",
   "ui.select.newAccount": "New account",
   "ui.hint.newAccount": "Export data from other accounts",
   "ui.hint.init": "Please open your wish history inside the game client before clicking on the 'Load data' button",
@@ -42,10 +43,11 @@
   "ui.setting.closeProxyHint": "When you choose proxy mode, if the program crashes it can cause unwanted results that may affect your system. You can click this button to clear the system proxy settings.",
   "ui.about.title": "About",
   "ui.about.license": "This software is opensource using MIT license.",
-  "ui.urldlg.title": "Input URL manually",
-  "ui.urldlg.hint": "Please input https://webstatic.mihoyo.com url",
-  "ui.urldlg.cancel": "Cancel",
-  "ui.urldlg.ok": "OK",
+  "ui.urldialog.title": "Input URL manually",
+  "ui.urldialog.hint": "This function should only be used when you understand what URL is needed here",
+  "ui.urldialog.placeholder": "Please enter the URL with authentication information",
+  "ui.common.cancel": "Cancel",
+  "ui.common.ok": "OK",
   "log.save.failed": "Failed to save local data",
   "log.file.notFound": "Unable to find game logs, please make sure you already opened wish history inside the game client",
   "log.url.notFound": "Unable to find URL",
