--- a/src/i18n/繁體中文.json
+++ b/src/i18n/繁體中文.json
@@ -42,10 +42,11 @@
   "ui.setting.closeProxyHint": "如果使用過代理模式時工具非正常關閉，可能導致系統proxy設置未能清除，可以通過這個按鈕來清除設置過的系統proxy。",
   "ui.about.title": "關於",
   "ui.about.license": "本工具為開源軟體，源代碼使用 MIT 協議授權",
-  "ui.urldlg.title": "手動輸入URL",
-  "ui.urldlg.hint": "請輸入 https://webstatic.mihoyo.com url",
-  "ui.urldlg.cancel": "取消",
-  "ui.urldlg.ok": "確定",
+  "ui.urldialog.title": "手動輸入URL",
+  "ui.urldialog.hint": "這個功能應當只在你理解這裡需要什麼URL時使用",
+  "ui.urldialog.placeholder": "請輸入帶有身份認證信息的URL",
+  "ui.common.cancel": "取消",
+  "ui.common.ok": "確定",
   "log.save.failed": "保存本機資料失敗",
   "log.file.notFound": "未找到遊戲日誌，請確認是否已開啟遊戲抽卡紀錄。",
   "log.url.notFound": "未找到URL",
