feat: directly start proxy mode

--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -6,6 +6,7 @@
   "ui.button.url": "Input URL",
   "ui.button.setting": "Settings",
   "ui.button.option": "Option",
+  "ui.button.startProxy": "Proxy mode",
   "ui.select.newAccount": "New account",
   "ui.hint.newAccount": "Export data from other accounts",
   "ui.hint.init": "Please open your wish history inside the game client before clicking on the 'Load data' button",
@@ -43,9 +44,9 @@
   "ui.setting.closeProxyHint": "When you choose proxy mode, if the program crashes it can cause unwanted results that may affect your system. You can click this button to clear the system proxy settings.",
   "ui.about.title": "About",
   "ui.about.license": "This software is opensource using MIT license.",
-  "ui.urldialog.title": "Input URL manually",
-  "ui.urldialog.hint": "This function should only be used when you understand what URL is needed here",
-  "ui.urldialog.placeholder": "Please enter the URL with authentication information",
+  "ui.urlDialog.title": "Input URL manually",
+  "ui.urlDialog.hint": "This function should only be used when you understand what URL is needed here",
+  "ui.urlDialog.placeholder": "Please enter the URL with authentication information",
   "ui.common.cancel": "Cancel",
   "ui.common.ok": "OK",
   "log.save.failed": "Failed to save local data",
