--- a/src/i18n/繁體中文.json
+++ b/src/i18n/繁體中文.json
@@ -5,6 +5,7 @@
   "ui.button.excel": "輸出Excel",
   "ui.button.url": "輸入URL",
   "ui.button.setting": "設定",
+  "ui.button.startProxy": "代理模式",
   "ui.select.newAccount": "新帳號",
   "ui.hint.newAccount": "從其他帳號導出資料",
   "ui.hint.init": "請先在遊戲裡打開任意一個抽卡紀錄後，再點擊“加載資料“按鈕。",
@@ -42,9 +43,9 @@
   "ui.setting.closeProxyHint": "如果使用過代理模式時工具非正常關閉，可能導致系統proxy設置未能清除，可以通過這個按鈕來清除設置過的系統proxy。",
   "ui.about.title": "關於",
   "ui.about.license": "本工具為開源軟體，源代碼使用 MIT 協議授權",
-  "ui.urldialog.title": "手動輸入URL",
-  "ui.urldialog.hint": "這個功能應當只在你理解這裡需要什麼URL時使用",
-  "ui.urldialog.placeholder": "請輸入帶有身份認證信息的URL",
+  "ui.urlDialog.title": "手動輸入URL",
+  "ui.urlDialog.hint": "這個功能應當只在你理解這裡需要什麼URL時使用",
+  "ui.urlDialog.placeholder": "請輸入帶有身份認證信息的URL",
   "ui.common.cancel": "取消",
   "ui.common.ok": "確定",
   "log.save.failed": "保存本機資料失敗",
