--- a/src/i18n/Français.json
+++ b/src/i18n/Français.json
@@ -2,10 +2,10 @@
   "symbol.colon": " : ",
   "ui.button.load": "Charger les données",
   "ui.button.update": "Mettre à jour",
-  "ui.button.excel": "Export Excel",
+  "ui.button.excel": "Exporter vers Excel",
   "ui.button.url": "URL d'import",
   "ui.button.setting": "Paramètres",
-  "ui.button.option": "Option",
+  "ui.button.option": "Options",
   "ui.button.startProxy": "Mode Proxy",
   "ui.select.newAccount": "Nouveau compte",
   "ui.hint.newAccount": "Charger les données d'autres comptes",
@@ -16,30 +16,30 @@
   "ui.data.total": "Total de",
   "ui.data.times": "tirages.",
   "ui.data.sum": "Vous avez effectué",
-  "ui.data.no5star": "tirages sans 5 étoiles.",
+  "ui.data.no5star": "tirages sans objet 5★.",
   "ui.data.character": "Personnage",
   "ui.data.weapon": "Arme",
-  "ui.data.star5": "5 étoiles",
-  "ui.data.star4": "4 étoiles",
-  "ui.data.star3": "3 étoiles",
-  "ui.data.history": "Historique de 5 étoiles",
-  "ui.data.average": "Moyenne de tirage de 5 étoiles",
-  "ui.data.chara5": "Personnage 5 étoiles",
-  "ui.data.chara4": "Personnage 4 étoiles",
-  "ui.data.weapon5": "Arme 5 étoiles",
-  "ui.data.weapon4": "Arme 4 étoiles",
-  "ui.data.weapon3": "Armes 3 étoiles",
+  "ui.data.star5": "5★",
+  "ui.data.star4": "4★",
+  "ui.data.star3": "3★",
+  "ui.data.history": "Historique de 5★",
+  "ui.data.average": "Moyenne de tirages d'objet 5★",
+  "ui.data.chara5": "Personnage 5★",
+  "ui.data.chara4": "Personnage 4★",
+  "ui.data.weapon5": "Arme 5★",
+  "ui.data.weapon4": "Arme 4★",
+  "ui.data.weapon3": "Arme 3★",
   "ui.setting.title": "Paramètres",
   "ui.setting.language": "Langue",
-  "ui.setting.languageHint": "L'anglais sera utilisé par défaut si la traduction est indisponible.",
+  "ui.setting.languageHint": "L'anglais sera utilisé par défaut si la traduction sélectionnée n'est pas disponible.",
   "ui.setting.logType": "Type de journalisation",
-  "ui.setting.auto": "Auto",
+  "ui.setting.auto": "Automatique",
   "ui.setting.cnServer": "Serveur Chinois",
   "ui.setting.seaServer": "Serveur Global",
-  "ui.setting.logTypeHint": "Choisissez les journaux générés par le serveur à utiliser en premier lors de la récupération de l'URL depuis les journaux du jeu.",
+  "ui.setting.logTypeHint": "Choisissez les journaux générés par le serveur à utiliser en priorité lors de la récupération de l'URL à partir des journaux du jeu.",
   "ui.setting.autoUpdate": "Mise à jour automatique",
   "ui.setting.proxyMode": "Mode Proxy",
-  "ui.setting.proxyModeHint": "Si la récupération de l'URL depuis les journaux système échoue, utilisez le proxy système When we fail to get the URL from system logs, use the system proxy.",
+  "ui.setting.proxyModeHint": "Si la récupération de l'URL depuis les journaux système échoue, utilisez le proxy système.",
   "ui.setting.closeProxy": "Désactiver le proxy système",
   "ui.setting.closeProxyHint": "Si le programme se bloque lorsque vous choisissez le mode proxy, des résultats indésirables susceptibles d'affecter votre système peuvent survenir. Vous pouvez cliquer sur ce bouton pour réinitialiser les paramètres du proxy système.",
   "ui.about.title": "À propos",
@@ -53,25 +53,25 @@
   "log.file.notFound": "Les journaux du jeu sont introuvables, veuillez vous assurer que vous avez déjà ouvert l'historique de vœux dans le client du jeu.",
   "log.url.notFound": "URL introuvable.",
   "log.file.readFailed": "Échec de la lecture des journaux.",
-  "log.fetch.retry": "Échec de la récupération des ${name} - page ${page}，nouvelle tentative dans 5 secondes pour la ${count}e fois……",
-  "log.fetch.retryFailed": "Échec de la récupération des ${name} - page ${page}，nombre de tentatives maximum atteint.",
-  "log.fetch.interval": "Récupération des ${name} - page ${page}，délai de 1 seconde toutes les 10 pages……",
+  "log.fetch.retry": "Échec de la récupération des ${name} - page ${page}, nouvelle tentative dans 5 secondes pour la ${count}e fois……",
+  "log.fetch.retryFailed": "Échec de la récupération des ${name} - page ${page}, nombre de tentatives maximum atteint.",
+  "log.fetch.interval": "Récupération des ${name} - page ${page}, délai de 1 seconde toutes les 10 pages……",
   "log.fetch.current": "Récupération des ${name} - page ${page}.",
   "log.fetch.authTimeout": "L'authentification de l'utilisateur a expiré, veuillez rouvrir l'historique des vœux dans le client du jeu.",
   "log.fetch.gachaType": "Récupération du type de vœux, veuillez patienter.",
   "log.fetch.gachaTypeOk": "Le type de vœux a été récupéré.",
   "log.url.lackAuth": "Clé d'authentification introuvable dans l'URL.",
-  "log.proxy.hint": "Utilisation du mode proxy [${ip}:${port}] pour obtenir l'URL， veuillez ouvrir l'historique de vœux ou essayer d'actualiser.",
+  "log.proxy.hint": "Utilisation du mode proxy [${ip}:${port}] pour obtenir l'URL, veuillez ouvrir l'historique de vœux ou essayer d'actualiser.",
   "log.url.notFound2": "URL introuvable, veuillez vous assurer que vous avez déjà ouvert l'historique de vœux dans le client du jeu.",
   "log.url.incorrect": "Impossible d'obtenir les paramètres d'URL.",
-  "log.autoUpdate.success": "Mise à jour automatique réussie， veuillez redémarrer le programme.",
+  "log.autoUpdate.success": "Mise à jour automatique réussie, veuillez redémarrer le programme.",
   "excel.header.time": "Date",
   "excel.header.name": "Nom",
   "excel.header.type": "Type",
   "excel.header.rank": "Rareté",
-  "excel.header.total": "Avancement total",
-  "excel.header.pity": "Avancement dans la pity",
+  "excel.header.total": "Tirages",
+  "excel.header.pity": "Pity 5★",
   "excel.customFont": "Arial",
-  "excel.filePrefix": "Genshin_historique_voeux",
+  "excel.filePrefix": "GenshinImpact_historique_voeux",
   "excel.fileType": "Classeur Excel"
 }
