i18n: Update Tiếng Việt.json

--- a/src/i18n/Tiếng Việt.json
+++ b/src/i18n/Tiếng Việt.json
@@ -3,7 +3,10 @@
     "ui.button.load": "Tải dữ liệu",
     "ui.button.update": "Cập nhật",
     "ui.button.excel": "Xuất tập tin Excel",
+    "ui.button.url": "Nhập URL",
     "ui.button.setting": "Cài đặt",
+    "ui.button.option": "Tùy chọn",
+    "ui.button.startProxy": "Chế độ Proxy",
     "ui.select.newAccount": "Chọn tài khoản",
     "ui.hint.newAccount": "Xuất dữ liệu từ tài khoản khác",
     "ui.hint.init": "Vui lòng mở lịch sử cầu nguyện của bạn bên trong trò chơi trước khi nhấp vào nút 'Tải dữ liệu'",
@@ -41,6 +44,11 @@
     "ui.setting.closeProxyHint": "Khi bạn chọn chế độ proxy, nếu chương trình bị treo, nó có thể gây ra các kết quả không mong muốn có thể ảnh hưởng đến hệ thống của bạn. Bạn có thể nhấp vào nút này để tắt cài đặt proxy hệ thống.",
     "ui.about.title": "Về tác giả",
     "ui.about.license": "Phần mềm này là mã nguồn mở sử dụng giấy phép MIT.",
+    "ui.urlDialog.title": "Nhập URL thủ công",
+    "ui.urlDialog.hint": "Chức năng này chỉ nên được sử dụng khi bạn hiểu URL nào là cần thiết ở đây",
+    "ui.urlDialog.placeholder": "Vui lòng nhập URL với thông tin xác thực",
+    "ui.common.cancel": "Hủy bỏ",
+    "ui.common.ok": "Đồng ý",
     "log.save.failed": "Không lưu được dữ liệu cục bộ",
     "log.file.notFound": "Không thể tìm thấy nhật ký trò chơi, vui lòng đảm bảo rằng bạn đã mở lịch sử cầu nguyện bên trong trò chơi",
     "log.url.notFound": "Không thể tìm thấy URL",
