add Indonesia translation

--- a/src/i18n/Indonesia.json
+++ b/src/i18n/Indonesia.json
@@ -1,1 +1,77 @@
-{}
+{
+    "symbol.colon": ": ",
+    "ui.button.load": "Muat data",
+    "ui.button.update": "Perbarui",
+    "ui.button.excel": "Ekspor Excel",
+    "ui.button.url": "Masukkan URL",
+    "ui.button.setting": "Pengaturan",
+    "ui.button.option": "Pilihan",
+    "ui.button.startProxy": "Mode proksi",
+    "ui.select.newAccount": "Akun baru",
+    "ui.hint.newAccount": "Ekspor data dari akun lain",
+    "ui.hint.init": "Silakan buka riwayat permohonan anda di dalam klien permainan sebelum klik pada tombol 'Muat data' ",
+    "ui.hint.lastUpdate": "Terakhir diperbarui",
+    "ui.hint.failed": "Aduhh, tampaknya gagal",
+    "ui.win.title": "Genshin Expor Catatan Permohonan",
+    "ui.data.total": "Total",
+    "ui.data.times": "Pulls",
+    "ui.data.sum": "Akumulasi",
+    "ui.data.no5star": "pulls tanpa ★ 5",
+    "ui.data.character": "Karakter",
+    "ui.data.weapon": "★ 5",
+    "ui.data.star4": "★ 4",
+    "ui.data.star3": "★ 3",
+    "ui.data.history": "Riwayat ★ 5",
+    "ui.data.average": "★ 5 dalam rata - rata",
+    "ui.data.chara5": "★ 5 karakter",
+    "ui.data.chara4": "★ 4 karakter",
+    "ui.data.weapon5": "★ 5 senjata",
+    "ui.data.weapon4": "★ 4 senjata",
+    "ui.data.weapon3": "★ 3 senjata",
+    "ui.setting.title": "Pengatuan",
+    "ui.setting.language": "Bahasa",
+    "ui.setting.languageHint": "Jika terjemahan hilang, Bahasa Inggris akan ditampilkan secara default.",
+    "ui.setting.logType": "Tipe catatan",
+    "ui.setting.auto": "Auto",
+    "ui.setting.cnServer": "Server China",
+    "ui.setting.seaServer": "Server Global",
+    "ui.setting.logTypeHint": "Pilih catatan yang dihasilkan dari server mana yang akan digunakan pertama kali saat memperoleh URL di dalam catatan permainan",
+    "ui.setting.autoUpdate": "Automatis perbarui",
+    "ui.setting.proxyMode": "Mode proksi",
+    "ui.setting.proxyModeHint": "Ketika kita gagal mengambil URL dari catatan sistem, gunakan proksi sistem",
+    "ui.setting.closeProxy": "Matikan sistem proksi",
+    "ui.setting.closeProxyHint": "Ketika anda memilih mode proksi, jika program macet dapat menyebabkan hasil yang tidak diinginkan yang dapat mempengaruhi sistem anda. Anda dapat klik tombol ini untuk menghapus pengaturan sistem proksi.",
+    "ui.about.title": "Tentang",
+    "ui.about.license": "Perangkat lunak ini opensource menggunakan lisensi MIT.",
+    "ui.urlDialog.title": "Masukkan URL secara manual",
+    "ui.urlDialog.hint": "Fungsi ini hanya boleh digunakan jika anda memahami URL apa yang dibutuhkan di sini",
+    "ui.urlDialog.placeholder": "Silakan masukkan URL dengan informasi autentikasi",
+    "ui.common.cancel": "Batalkan",
+    "ui.common.ok": "OK",
+    "log.save.failed": "Gagal untuk menyimpan data lokal",
+    "log.file.notFound": "Tidak bisa menemukan catatan permainan, pastikan anda telah membuka riwayat permohonan di dalam klien permainan",
+    "log.url.notFound": "Tidak dapat menemukan URL",
+    "log.file.readFailed": "Gagal membaca catatan",
+    "log.fetch.retry": "Proses ${name} dari halaman $ {page} gagal, mencoba lagi dalam 5 detik untuk waktu ${count} ……",
+    "log.fetch.retryFailed": "Proses ${name} dari halaman $ {page} gagal, waktu coba lagi telah mencapai batas maksimum",
+    "log.fetch.interval": "Proses ${name} dari halaman ${page}， waktu tunggu 1 detik setiap 10 halaman ……",
+    "log.fetch.current": "Proses ${name} dari halaman $ {page}",
+    "log.fetch.authTimeout": "Autentikasi pengguna kedaluwarsa, buka kembali riwayat permohonan di dalam klien permainan.",
+    "log.fetch.gachaType": "Sedang mengambil tipe permohonan, silahkan tunggu",
+    "log.fetch.gachaTypeOk": "Jenis permohonan diperoleh",
+    "log.url.lackAuth": "Authkey tidak ditemukan di URL",
+    "log.proxy.hint": "Menggunakan mode proksi [${ip}:${port}] untuk mendapatkan URL, buka riwayat permohonan atau coba segarkan",
+    "log.url.notFound2": "Tidak dapat menemukan URL, pastikan Anda telah membuka riwayat permohonan di dalam klien permainan",
+    "log.url.incorrect": "Tidak bisa mendapatkan parameter URL",
+    "log.autoUpdate.success": "Pembaruan otomatis berhasil, mulai ulang program",
+    "excel.header.time": "waktu",
+    "excel.header.name": "nama",
+    "excel.header.type": "tipe",
+    "excel.header.rank": "rarity",
+    "excel.header.total": "total",
+    "excel.header.pity": "dengan pity",
+    "excel.customFont": "Arial",
+    "excel.filePrefix": "GenshinImpact_catatan_permohonan",
+    "excel.fileType": "Excel file"
+}
+
