--- a/src/i18n/한국어.json
+++ b/src/i18n/한국어.json
@@ -2,7 +2,7 @@
 "symbol.colon": ": ",
 "ui.button.load": "데이터 로드",
 "ui.button.update": "업데이트",
-"ui.button.excel": "엑셀 출력",
+"ui.button.excel": "엑셀로 내보내기",
 "ui.button.url": "URL 입력",
 "ui.button.setting": "설정",
 "ui.button.option": "옵션",
@@ -41,7 +41,7 @@
 "ui.setting.proxyMode": "프록시 모드",
 "ui.setting.proxyModeHint": "시스템 로그에서 URL을 가져오지 못한 경우 시스템 프록시를 사용합니다.",
 "ui.setting.closeProxy": "시스템 프록시 사용 안 함",
-"ui.setting.closeProxyHint": "프록시 모드를 선택할 때 프로그램이 충돌하면 시스템에 영향을 줄 수 있는 원하지 않는 결과가 발생할 수 있습니다. 이 단추를 눌러 시스템 프록시 설정을 지울 수 있습니다.",
+"ui.setting.closeProxyHint": "프록시 모드를 선택할 때 프로그램이 충돌하면 시스템에 영향을 줄 수 있는 원하지 않는 결과가 발생할 수 있습니다. 이 버튼을 눌러 시스템 프록시 설정을 지울 수 있습니다.",
 "ui.about.title": "About",
 "ui.about.license": "This software is opensource using MIT license.",
 "ui.urlDialog.title": "수동으로 URL 입력",
