feat: add remark for wish2 in excel

--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -71,6 +71,8 @@
   "excel.header.rank": "rarity",
   "excel.header.total": "total",
   "excel.header.pity": "within pity",
+  "excel.header.remark": "remark",
+  "excel.wish2": "Wish 2",
   "excel.customFont": "Arial",
   "excel.filePrefix": "Genshin wish logger",
   "excel.fileType": "Excel file"
