Add German translation

--- a/src/i18n/Deutsch.json
+++ b/src/i18n/Deutsch.json
@@ -1,1 +1,79 @@
-{}
+{
+   "symbol.colon": ": ",
+   "ui.button.load": "Lade Daten",
+   "ui.button.update": "Aktualisieren",
+   "ui.button.excel": "In Excel exportieren",
+   "ui.button.url": "Eingabe URL",
+   "ui.button.setting": "Einstellungen",
+   "ui.button.option": "Optionen",
+   "ui.button.startProxy": "Proxy modus",
+   "ui.select.newAccount": "Neuer Nutzer",
+   "ui.hint.newAccount": "Daten von anderen Nutzern exportieren",
+   "ui.hint.init": "Bitte öffne deinen Wunschlverlauf im Spiel bevor du versuchst deine Wunschdaten zu laden",
+   "ui.hint.lastUpdate": "Letzte Aktualisierung",
+   "ui.hint.failed": "Oops, irgendetwas ist schief gelaufen",
+   "ui.win.title": "Genshin Wunsch Verlauf Exporter",
+   "ui.data.total": "Total",
+   "ui.data.times": "Wünsche",
+   "ui.data.sum": "Angehäuft",
+   "ui.data.no5star": "Wünsche ohne 5 Sterne",
+   "ui.data.character": "Character",
+   "ui.data.weapon": "Waffe",
+   "ui.data.star5": "5 Sterne",
+   "ui.data.star4": "4 Sterne",
+   "ui.data.star3": "3 Sterne",
+   "ui.data.history": "5 Sterne verlauf",
+   "ui.data.average": "Durschnittlicher 5 Sterne",
+   "ui.data.chara5": "5 Sterne Character",
+   "ui.data.chara4": "4 Sterne Character",
+   "ui.data.weapon5": "5 Sterne Waffe",
+   "ui.data.weapon4": "4 Sterne Waffe",
+   "ui.data.weapon3": "3 Sterne Waffe",
+   "ui.setting.title": "Einstellungen",
+   "ui.setting.language": "Sprache",
+   "ui.setting.languageHint": "Wenn eine Übersetzung fehlt, wird Englisch als Standardsparche ausgewählt.",
+   "ui.setting.logType": "Aufzeichnungstyp",
+   "ui.setting.auto": "Automatisch",
+   "ui.setting.cnServer": "CN Server",
+   "ui.setting.seaServer": "Globaler Server",
+   "ui.setting.logTypeHint": "Wähle aus, welche von dem Server generierten Aufzeichnungen benutzt werden sollen, wenn zum ersten mal die URL von den Spielaufzeichnungen erworben wird",
+   "ui.setting.autoUpdate": "Automatische Aktualisierung",
+   "ui.setting.proxyMode": "Proxy modus",
+   "ui.setting.proxyModeHint": "Wenn das Erwerben der URL von den Systemaufzeichnungen scheitert, nutz den Systemproxy",
+   "ui.setting.closeProxy": "Deaktiviere den Systemproxy",
+   "ui.setting.closeProxyHint": "Wenn der Proxymodus aktiviert ist und das Programm abstürzt kann es zu unerwünschten Folgen für dein System führen. Du kannst diesen Knopf drücken, um die Systemproxy Einstellungen zurückzusetzen.",
+   "ui.about.title": "Über uns",
+   "ui.about.license": "Diese Software ist Open-Source und nutzt die MIT Lizenz.",
+   "ui.urlDialog.title": "Gebe die URL manuell ein",
+   "ui.urlDialog.hint": "Diese Funktion sollte nur benutzt werden, falls Sie wissen, welche URL hier benötigt wird",
+   "ui.urlDialog.placeholder": "Bitte gebe die URL mit den Authentifizierungsinformationen ein",
+   "ui.common.cancel": "Abbrechen",
+   "ui.common.ok": "Weiter",
+   "log.save.failed": "Lokale Daten konnten nicht gespeichert werden",
+   "log.file.notFound": "Die Wunschaufzeichnungen konnten nicht gefunden werden, stelle sicher, dass du im Spiel deinen Wunschverlauf schon geöffnet hast",
+   "log.url.notFound": "Konnte die URL nicht finden",
+   "log.file.readFailed": "Konnte die Aufzeichnungen nicht lesen",
+   "log.fetch.retry": "Das Verarbeiten von ${name} auf Seite ${page} ist gescheitert，versuche in 5 Sekunden erneut, zum ${count}. mal…",
+   "log.fetch.retryFailed": "Das Verarbeiten von ${name} auf Seite ${page} ist gescheitert, maximale Versuche wurden erreicht",
+   "log.fetch.interval": "Verarbeite ${name} auf Seite ${page}，1 Sekunde Timeout für 10 Seiten…",
+   "log.fetch.current": "Verarbeite ${name} auf Seite ${page}",
+   "log.fetch.authTimeout": "Die Nutzer Authentifizierung ist abgelaufen, bitte öffne im Spiel die Wunschaufzeichnungen erneut.",
+   "log.fetch.gachaType": "Wunschtyp wird erworben, bitte warten",
+   "log.fetch.gachaTypeOk": "Wunschtyp erworben",
+   "log.url.lackAuth": "Der Authentifizierungsschlüssel konnte in der URL nicht aufgefunden werden",
+   "log.proxy.hint": "Nutze den Proxymodus [${ip}:${port}] um die URL zu erwerben，bitte öffnen Sie ihre Wunschaufzeichnungen oder versuchen Sie zu Aktualisieren",
+   "log.url.notFound2": "URL konnte nicht gefunden werden, bitte stelle sicher, dass du deinen Wunschverlauf schon einmal im Spiel geöffnet hast",
+   "log.url.incorrect": "URL Parameter konnten nicht erworben werden",
+   "log.autoUpdate.success": "Die automatische aktualisierung war erfolgreich, bitte starten sie das Programm neu",
+   "excel.header.time": "zeit",
+   "excel.header.name": "name",
+   "excel.header.type": "typ",
+   "excel.header.rank": "seltenheit",
+   "excel.header.total": "ingesammt",
+   "excel.header.pity": "innerhalb von pity",
+   "excel.header.remark": "bemerkung",
+   "excel.wish2": "Wunsch 2",
+   "excel.customFont": "Arial",
+   "excel.filePrefix": "Genshin Wunsch Aufzeichner",
+   "excel.fileType": "Excel Datei"
+}
