--- a/src/i18n/ภาษาไทย.json
+++ b/src/i18n/ภาษาไทย.json
@@ -1,1 +1,78 @@
-{}
+{
+    "symbol.colon": ": ",
+    "ui.button.load": "โหลดข้อมูล",
+    "ui.button.update": "อัพเดต",
+    "ui.button.excel": "แตกไฟล์เป็น Excel",
+    "ui.button.url": "กรอก URL",
+    "ui.button.setting": "ตั้งค่า",
+    "ui.button.option": "ตัวเลือก",
+    "ui.button.startProxy": "เปิดโหมด Proxy",
+    "ui.select.newAccount": "บัญชีใหม่",
+    "ui.hint.newAccount": "Export data from other accounts",
+    "ui.hint.init": "โปรดทำการเปิดประวัติตู้สุ่มของคุณภายในเกมส์ก่อนที่จะกดปุ่ม 'โหลดข้อมูล'",
+    "ui.hint.lastUpdate": "อัพเดตเมื่อ",
+    "ui.hint.failed": "ล้มเหลว",
+    "ui.win.title": "Genshin Wish History Exporter",
+    "ui.data.total": "ทั้งหมด",
+    "ui.data.times": "ครั้ง",
+    "ui.data.sum": "กดโรลไปทั้งหมด",
+    "ui.data.no5star": "โดยที่ไม่ได้ 5 ดาว",
+    "ui.data.character": "ตัวละคร",
+    "ui.data.weapon": "อาวุธ",
+    "ui.data.star5": "5 ดาว",
+    "ui.data.star4": "4 ดาว",
+    "ui.data.star3": "3 ดาว",
+    "ui.data.history": "ประวัติ 5 ดาว",
+    "ui.data.average": "ค่าเฉลี่ย 5 ดาว",
+    "ui.data.chara5": "ตัวละคร 5 ดาว",
+    "ui.data.chara4": "ตัวละคร 4 ดาว",
+    "ui.data.weapon5": "อาวุธ 5 ดาว",
+    "ui.data.weapon4": "อาวุธ 4 ดาว",
+    "ui.data.weapon3": "อาวุธ 3 ดาว",
+    "ui.setting.title": "ตั้งค่า",
+    "ui.setting.language": "ภาษา",
+    "ui.setting.languageHint": "หากภาษาไม่แสดงผล ภาษาอังกฤษจะถูกแสดงแทนภาษานั้น",
+    "ui.setting.logType": "ชนิด Log",
+    "ui.setting.auto": "ออโต้",
+    "ui.setting.cnServer": "เซิฟจีน (CN)",
+    "ui.setting.seaServer": "เซิฟต่างประเทศ (Global)",
+    "ui.setting.logTypeHint": "เลือกเซิฟเวอร์ที่ต้องการดูประวัติตู้สุ่มจากภายในเกมส์",
+    "ui.setting.autoUpdate": "เปิดอัพเดตอัตโนมัติ",
+    "ui.setting.proxyMode": "โหมดพร็อกซี่",
+    "ui.setting.proxyModeHint": "When we fail to get the URL from system logs, use the system proxy",
+    "ui.setting.closeProxy": "ิปิดโหมดพร็อกซี่",
+    "ui.setting.closeProxyHint": "When you choose proxy mode, if the program crashes it can cause unwanted results that may affect your system. You can click this button to clear the system proxy settings.",
+    "ui.about.title": "เกี่ยวกับ",
+    "ui.about.license": "โปรแกรมนี้เป็น Open Source โดยอยู่ในอยู่ในสัญญาอนุญาต MIT ของผู้พัฒนา",
+    "ui.urlDialog.title": "กรอก URL ด้วยตัวเอง",
+    "ui.urlDialog.hint": "ฟังชั่นนี้ควรจะใช้ก็ต่อเมื่อคุณเข้าใจว่า แหล่ง URL นี้มาจากไหน",
+    "ui.urlDialog.placeholder": "โปรดกรอก URL ที่มีคีย์ข้อมูลของคุณ",
+    "ui.common.cancel": "ยกเลิก",
+    "ui.common.ok": "โอเค",
+    "log.save.failed": "บันทึกข้อมูลไม่สำเร็จ",
+    "log.file.notFound": "ไม่พบ Log ข้อมูลเกมส์, โปรดตรวจสอบให้แน่ใจว่าคุณได้เปิดประวัติตู้สุ่มในเกมส์ของคุณแล้ว",
+    "log.url.notFound": "ไม่พบ URL ที่ต้องการ",
+    "log.file.readFailed": "ไม่สามารถอ่านไฟล์ข้อมูลได้",
+    "log.fetch.retry": "ดึงข้อมูลตู้สุ่ม ${name} ในหน้าที่ ${page} ไม่สำเร็จ กำลังดึงข้อมูลใหม่ภายใน 5 วินาที ${count} ครั้ง",
+    "log.fetch.retryFailed": "ดึงข้อมูลตู้สุ่ม ${name} ในหน้าที่ ${page} ไม่สำเร็จ หมดเวลาการดึงข้อมูล",
+    "log.fetch.interval": "ดึงข้อมูลตู้สุ่ม ${name} ในหน้าที่ ${page} ลูปข้อมูล 1 วินาที ต่อ 10 หน้า",
+    "log.fetch.current": "ดึงข้อมูลตู้สุ่ม ${name} ในหน้าที่ ${page}",
+    "log.fetch.authTimeout": "คีย์ผู้ใช้งานหมดอายุ โปรดทำการเปิดประวัติตู้สุ่มใหม่",
+    "log.fetch.gachaType": "กำลังดึงข้อมูลตู้สุ่ม",
+    "log.fetch.gachaTypeOk": "Wish type acquired",
+    "log.url.lackAuth": "ไม่พบสิทธิ์การเข้าถึงข้อมูล",
+    "log.proxy.hint": "Using proxy mode [${ip}:${port}] to get URL，please open wish history or try to refresh",
+    "log.url.notFound2": "ไม่พบ URL ที่ต้องการ โปรดตรวจสอบให้แน่ใจว่าคุณได้เปิดประวัติตู้สุ่มในเกมส์ของคุณแล้ว",
+    "log.url.incorrect": "ไม่พบพารามิเตอร์ที่ต้องการ",
+    "log.autoUpdate.success": "อัพเดตสำเร็จ，โปรดรีสตาร์จโปรแกรม",
+    "excel.header.time": "เวลา",
+    "excel.header.name": "ชื่อ",
+    "excel.header.type": "ประเภท",
+    "excel.header.rank": "แรงค์",
+    "excel.header.total": "ทั้งหมด",
+    "excel.header.pity": "within pity",
+    "excel.customFont": "Arial",
+    "excel.filePrefix": "Genshin wish logger",
+    "excel.fileType": "ไฟล์ Excel"
+  }
+  
