--- a/src/i18n/ภาษาไทย.json
+++ b/src/i18n/ภาษาไทย.json
@@ -2,21 +2,21 @@
     "symbol.colon": ": ",
     "ui.button.load": "โหลดข้อมูล",
     "ui.button.update": "อัพเดต",
-    "ui.button.excel": "แตกไฟล์เป็น Excel",
+    "ui.button.excel": "แปลงเป็น Excel",
     "ui.button.url": "กรอก URL",
     "ui.button.setting": "ตั้งค่า",
     "ui.button.option": "ตัวเลือก",
-    "ui.button.startProxy": "เปิดโหมด Proxy",
+    "ui.button.startProxy": "โหมด Proxy",
     "ui.select.newAccount": "บัญชีใหม่",
-    "ui.hint.newAccount": "Export data from other accounts",
-    "ui.hint.init": "โปรดทำการเปิดประวัติตู้สุ่มของคุณภายในเกมส์ก่อนที่จะกดปุ่ม 'โหลดข้อมูล'",
+    "ui.hint.newAccount": "สร้่างข้อมูลบัญชีใหม่",
+    "ui.hint.init": "โปรดทำการเปิดประวัติตู้อธิษฐานของคุณภายในเกมส์ก่อนที่จะกดปุ่ม 'โหลดข้อมูล'",
     "ui.hint.lastUpdate": "อัพเดตเมื่อ",
-    "ui.hint.failed": "ล้มเหลว",
+    "ui.hint.failed": "เอ๊ะ? มีบางผิดปกติ",
     "ui.win.title": "Genshin Wish History Exporter",
     "ui.data.total": "ทั้งหมด",
     "ui.data.times": "ครั้ง",
-    "ui.data.sum": "กดโรลไปทั้งหมด",
-    "ui.data.no5star": "โดยที่ไม่ได้ 5 ดาว",
+    "ui.data.sum": "รวมทั้งหมด",
+    "ui.data.no5star": "โดยที่ไม่ได้รับ 5 ดาว",
     "ui.data.character": "ตัวละคร",
     "ui.data.weapon": "อาวุธ",
     "ui.data.star5": "5 ดาว",
@@ -36,33 +36,33 @@
     "ui.setting.auto": "ออโต้",
     "ui.setting.cnServer": "เซิฟจีน (CN)",
     "ui.setting.seaServer": "เซิฟต่างประเทศ (Global)",
-    "ui.setting.logTypeHint": "เลือกเซิฟเวอร์ที่ต้องการดูประวัติตู้สุ่มจากภายในเกมส์",
+    "ui.setting.logTypeHint": "เลือกเซิฟเวอร์ที่จะให้เซิฟเวอร์สร้าง Log ก่อนที่จะดึงข้อมูลประวัติตู้อธิษฐาน",
     "ui.setting.autoUpdate": "เปิดอัพเดตอัตโนมัติ",
     "ui.setting.proxyMode": "โหมดพร็อกซี่",
-    "ui.setting.proxyModeHint": "When we fail to get the URL from system logs, use the system proxy",
+    "ui.setting.proxyModeHint": "ในกรณีที่ไม่สามารถดึงข้อมูลจาก URL ที่ระบุได้ ให้ใช้โหมดพร็อกซี่",
     "ui.setting.closeProxy": "ิปิดโหมดพร็อกซี่",
-    "ui.setting.closeProxyHint": "When you choose proxy mode, if the program crashes it can cause unwanted results that may affect your system. You can click this button to clear the system proxy settings.",
+    "ui.setting.closeProxyHint": "ในขณะที่เลือกโหมดพร็อกซี่ หากโปรแกรมเกิดขัดข้อง อาจทำให้เกิดผลลัพธ์ไม่ถูกต้องซึ่งอาจส่งผลกระทบระบบของคุณ คุณสามารถคลิกที่นี่เพื่อล้างการตั้งค่าพร็อกซี่",
     "ui.about.title": "เกี่ยวกับ",
-    "ui.about.license": "โปรแกรมนี้เป็น Open Source โดยอยู่ในอยู่ในสัญญาอนุญาต MIT ของผู้พัฒนา",
+    "ui.about.license": "โปรแกรมนี้เป็น Open Source โดยอยู่ในอยู่ในใบอนุญาต MIT",
     "ui.urlDialog.title": "กรอก URL ด้วยตัวเอง",
-    "ui.urlDialog.hint": "ฟังชั่นนี้ควรจะใช้ก็ต่อเมื่อคุณเข้าใจว่า แหล่ง URL นี้มาจากไหน",
+    "ui.urlDialog.hint": "ฟังชั่นนี้ควรจะใช้ก็ต่อเมื่อคุณเข้าใจว่าแหล่ง URL นี้มาจากไหน",
     "ui.urlDialog.placeholder": "โปรดกรอก URL ที่มีคีย์ข้อมูลของคุณ",
     "ui.common.cancel": "ยกเลิก",
     "ui.common.ok": "โอเค",
     "log.save.failed": "บันทึกข้อมูลไม่สำเร็จ",
-    "log.file.notFound": "ไม่พบ Log ข้อมูลเกมส์, โปรดตรวจสอบให้แน่ใจว่าคุณได้เปิดประวัติตู้สุ่มในเกมส์ของคุณแล้ว",
-    "log.url.notFound": "ไม่พบ URL ที่ต้องการ",
+    "log.file.notFound": "ไม่พบ Log ข้อมูลเกมส์, โปรดตรวจสอบให้แน่ใจว่าคุณได้เปิดประวัติตู้อธิษฐานในเกมส์ของคุณแล้ว",
+    "log.url.notFound": "ไม่พบ URL",
     "log.file.readFailed": "ไม่สามารถอ่านไฟล์ข้อมูลได้",
-    "log.fetch.retry": "ดึงข้อมูลตู้สุ่ม ${name} ในหน้าที่ ${page} ไม่สำเร็จ กำลังดึงข้อมูลใหม่ภายใน 5 วินาที ${count} ครั้ง",
-    "log.fetch.retryFailed": "ดึงข้อมูลตู้สุ่ม ${name} ในหน้าที่ ${page} ไม่สำเร็จ หมดเวลาการดึงข้อมูล",
-    "log.fetch.interval": "ดึงข้อมูลตู้สุ่ม ${name} ในหน้าที่ ${page} ลูปข้อมูล 1 วินาที ต่อ 10 หน้า",
-    "log.fetch.current": "ดึงข้อมูลตู้สุ่ม ${name} ในหน้าที่ ${page}",
-    "log.fetch.authTimeout": "คีย์ผู้ใช้งานหมดอายุ โปรดทำการเปิดประวัติตู้สุ่มใหม่",
-    "log.fetch.gachaType": "กำลังดึงข้อมูลตู้สุ่ม",
-    "log.fetch.gachaTypeOk": "Wish type acquired",
+    "log.fetch.retry": "ดึงข้อมูลตู้อธิษฐาน ${name} ในหน้าที่ ${page} ไม่สำเร็จ กำลังดึงข้อมูลใหม่ภายใน 5 วินาทีในครั้งที่ ${count}",
+    "log.fetch.retryFailed": "ดึงข้อมูลตู้อธิษฐาน ${name} ในหน้าที่ ${page} ไม่สำเร็จ หมดเวลาการดึงข้อมูล",
+    "log.fetch.interval": "ดึงข้อมูลตู้อธิษฐาน ${name} ในหน้าที่ ${page} ทุก ๆ 1 วินาทีต่อ 10 หน้า",
+    "log.fetch.current": "ดึงข้อมูลตู้อธิษฐาน ${name} ในหน้าที่ ${page}",
+    "log.fetch.authTimeout": "ข้อมูลยืนยันตัวตนหมดอายุ โปรดทำการเปิดประวัติตู้อธิษฐานใหม่ภายในเกมส์",
+    "log.fetch.gachaType": "กำลังดึงข้อมูลตู้อธิษฐาน",
+    "log.fetch.gachaTypeOk": "ได้ข้อมูลตู้อธิษฐานสำเร็จ",
     "log.url.lackAuth": "ไม่พบสิทธิ์การเข้าถึงข้อมูล",
-    "log.proxy.hint": "Using proxy mode [${ip}:${port}] to get URL，please open wish history or try to refresh",
-    "log.url.notFound2": "ไม่พบ URL ที่ต้องการ โปรดตรวจสอบให้แน่ใจว่าคุณได้เปิดประวัติตู้สุ่มในเกมส์ของคุณแล้ว",
+    "log.proxy.hint": "กำลังใช้โหมดพร็อกซี [${ip}:${port}] เพื่อดึงข้อมูลตู้อธิษฐาน โปรดเปิดประวัติตู้กาชาในเกมส์ของคุณ หรือลองรีเฟรชข้อมูล",
+    "log.url.notFound2": "ไม่พบ URL ที่ต้องการ โปรดตรวจสอบให้แน่ใจว่าคุณได้เปิดประวัติตู้กาชาในเกมส์ของคุณแล้ว",
     "log.url.incorrect": "ไม่พบพารามิเตอร์ที่ต้องการ",
     "log.autoUpdate.success": "อัพเดตสำเร็จ，โปรดรีสตาร์จโปรแกรม",
     "excel.header.time": "เวลา",
@@ -70,7 +70,7 @@
     "excel.header.type": "ประเภท",
     "excel.header.rank": "แรงค์",
     "excel.header.total": "ทั้งหมด",
-    "excel.header.pity": "within pity",
+    "excel.header.pity": "การันตี",
     "excel.customFont": "Arial",
     "excel.filePrefix": "Genshin wish logger",
     "excel.fileType": "ไฟล์ Excel"
